--- a/app/assets/stylesheets/pages/list-page.scss
+++ b/app/assets/stylesheets/pages/list-page.scss
@@ -8,6 +8,7 @@
 .content.list .primary, .content.component .primary { 
   padding: 20px 0; 
   width: 101%;
+  margin-bottom: 280px;
 }
 
 .home-content {
